@@ -2044,10 +2044,6 @@
       <value>all nodes must be in same collection</value>
     </diagnostic>
 
-    <diagnostic code="ZDDY0019" name="UNDO_NOT_POSSIBLE">
-      <value>"$1": collection $2 cannot be undone</value>
-    </diagnostic>
-
     <diagnostic code="ZDDY0020" name="INDEX_DOMAIN_NODE_NOT_IN_COLLECTION">
       <value>"$1": index domain expression yields nodes that are not in collection</value>
     </diagnostic>
