@@ -2104,6 +2104,14 @@ void CollectionPul::applyUpdates()
   if (!theDeleteCollectionList.empty())
     return;
 
+  // if the collection is truncated, no other primitive needs to be applied
+  if (!theTruncateCollectionList.empty())
+  {
+    applyList(theTruncateCollectionList);
+    theIsApplied = true;
+    return;
+  }
+
   try
   {
     // Compute the before-delta for each incrementally maintained index.
@@ -2195,7 +2203,6 @@ void CollectionPul::applyUpdates()
     applyList(theCreateCollectionList);
     applyList(theInsertIntoCollectionList);
     applyList(theDeleteFromCollectionList);
-    applyList(theTruncateCollectionList);
 
     // Compute the after-delta for each incrementally maintained index.
     computeIndexAfterDeltas();
